git ignore and gulp

--- a/workout-tracker/package.json
+++ b/workout-tracker/package.json
@@ -12,6 +12,18 @@
     "body-parser": "^1.16.1",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
-    "massive": "^2.6.0"
-  }
+    "massive": "^2.6.0",
+    "passport": "^0.3.2",
+    "passport-auth0": "^0.6.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SirBLT/workout-builder.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SirBLT/workout-builder/issues"
+  },
+  "homepage": "https://github.com/SirBLT/workout-builder#readme",
+  "description": "",
+  "devDependencies": {}
 }
